<resources>

    <string name="app_name">Notification Hub</string>
    <string name="service_label">Notification Hub</string>
    <string name="notification_listener_service">Notification Listener Service</string>
    <string name="notification_listener_service_explanation">Application require permission to enable the Notification Listener Service to work, Enable it now..!!</string>
    <string name="settings">Settings</string>
    <string name="testingNotification">Testing Notification</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="give_permission">Give Permission</string>
    <string name="delete">Delete</string>
    <string name="delete_all_notification">All saved notifications will be deleted</string>
    <string name="delete_save_notification">Delete saved notification?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="tag_line">Get organized with all notifications in one app</string>
    <string name="no_new_notifications">No new notifications !</string>
    <string name="application_names">Application Name</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="group_name">Group Name</string>
    <string name="never">Never</string>
    <string name="_30_days">30 Days</string>
    <string name="_15_days">15 Days</string>
    <string name="_7_days">7 Days</string>
    <string name="_1_minute">1 Minute</string>
    <string name="delete_all">Delete All</string>
    <string name="auto_delete">Auto Delete</string>
    <string name="notifications_from_selected_apps">Notifications from selected apps will be saved</string>
    <string name="save_notifications">Save notifications</string>
    <string name="notification">Notification</string>
    <string name="edit_created_groups">Edit created groups</string>
    <string name="edit_group">Edit Group</string>
    <string name="create_new_group">Create new group</string>
    <string name="create_group">Create Group</string>
    <string name="group">Group</string>
    <string name="select_all">Select All</string>

</resources>
