<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black_text"
        android:textSize="15sp"
        Tools:text="heading" />

    <EditText
        android:id="@+id/dialog_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/msg_box"
        android:hint="Enter text"
        android:inputType="textCapWords"
        android:paddingLeft="15dp"
        android:paddingTop="11dp"
        android:paddingRight="15dp"
        android:paddingBottom="11dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white_text" />

        <Button
            android:id="@+id/dialog_confirm_btn"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_background"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white_text" />

    </LinearLayout>
</LinearLayout>